--- a/SWD607_Assignment2/Resources/layout/AddEdit.xml
+++ b/SWD607_Assignment2/Resources/layout/AddEdit.xml
@@ -83,7 +83,7 @@
                     android:id="@+id/textlabelSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/number_tag"
+                    android:text="Table"
                     android:paddingStart="16dp"
                     android:textSize="25sp"
                     android:textStyle="bold"
