--- a/SWD607_Assignment2/Resources/layout/OrderDetail.xml
+++ b/SWD607_Assignment2/Resources/layout/OrderDetail.xml
@@ -588,6 +588,116 @@
                         android:textColor="@android:color/black"/>
 
                 </RelativeLayout>
+             <RelativeLayout
+                    android:minWidth="25px"
+                    android:minHeight="25px"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:id="@+id/relativeLayout15" >
+
+                    <!-- Food Image -->
+                    <ImageView
+                        android:id="@+id/imageSesameFlankSteakSalad"
+                        android:layout_width="150dp"
+                        android:layout_height="130dp"
+                        android:src="@drawable/sesame_flank_steak_salad1"
+                        android:contentDescription="@string/imageViewLogo"
+                        android:layout_alignParentStart="true"/>
+
+                    <!-- Name -->
+                    <TextView
+                        android:id="@+id/foodName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/food_name6"
+                        android:textSize="20sp"
+                        android:paddingStart="15dp"
+                        android:textColor="@android:color/black"
+                        android:layout_toEndOf="@+id/imageSesameFlankSteakSalad"/>
+
+                    <!-- Size -->
+                    <TextView
+                        android:id="@+id/foodSize"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/food_size"
+                        android:textSize="20sp"
+                        android:paddingStart="165dp"
+                        android:layout_marginTop="3dp"
+                        android:textColor="@android:color/black"
+                        android:layout_below="@+id/foodName"/>
+
+                    <!-- Price -->
+                    <TextView
+                        android:id="@+id/foodPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/food_price6"
+                        android:textSize="20sp"
+                        android:paddingStart="165dp"
+                        android:layout_marginTop="3dp"
+                        android:textColor="@android:color/black"
+                        android:layout_below="@id/foodSize"/>
+
+                    <!-- Quantity Label -->
+                    <TextView
+                        android:id="@+id/foodQuantityLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/food_quantity"
+                        android:textSize="20sp"
+                        android:paddingStart="165dp"
+                        android:layout_marginTop="9dp"
+                        android:textColor="@android:color/black"
+                        android:layout_below="@id/foodPrice"/>
+
+                    <!-- Quantity Spinner -->
+                    <EditText
+                        android:id="@+id/foodQuantity5"
+                        android:layout_width="80dp"
+                        android:layout_height="35dp"
+                        android:textSize="20sp"
+                        android:paddingStart="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="95dp"
+                        android:inputType="number"
+                        android:background="@drawable/white_button_border_gray"
+                        android:layout_toRightOf="@+id/foodQuantityLabel"/>
+
+                    <!-- Delete Button -->
+                    <Button
+                        android:id="@+id/deleteButton5"
+                        android:layout_width="50dp"
+                        android:layout_height="35dp"
+                        android:text="@string/small_delete"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:paddingStart="5dp"
+                        android:paddingEnd="5dp"
+                        android:layout_marginStart="95dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="95dp"
+                        android:textAllCaps="false"
+                        android:background="@drawable/gray_button"
+                        android:layout_toRightOf="@+id/foodQuantityLabel"/>
+
+                    <!-- Cost -->
+                    <TextView
+                        android:id="@+id/foodCost5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/price_total_amount"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:layout_marginStart="480dp"                                      
+                        android:layout_marginTop="95dp"
+                        android:textColor="@android:color/black"/>
+
+                </RelativeLayout>
             
                     <!-- Date -->
                     <RelativeLayout
